--- a/www/index.html
+++ b/www/index.html
@@ -32,17 +32,18 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <link rel="stylesheet" type="text/css" href='css/bootstrap.min.css'>
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+        <div class="fluid-container">
+          <h1> Hello There </h1>
+          <button class="btn btn-primary" id="button">Press me bro</button>
         </div>
+        <!-- Latest compiled and minified JavaScript -->
+        <script  type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+        <script  type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
