--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+        <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -59,8 +59,9 @@
             </div>
             <button type="submit" class="btn btn-primary search-button">Search</button>
           </form>
+          <button class="btn btn-primary" id="ajax">Get Tweet</button>
         </div>
-        <!-- Latest compiled and minified JavaScript -->  
+        <!-- Latest compiled and minified JavaScript -->
         <script type="text/javascript" src="cordova.js"></script>
         <script  type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
         <script  type="text/javascript" src="js/bootstrap.min.js"></script>
