--- a/www/index.html
+++ b/www/index.html
@@ -37,37 +37,55 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div class="container text-center">
-          <h1> IW Mobile App </h1>
-          <form method="POST" id="form">
-            <div class="form-group">
-              <input type="text" class="form-control" name="player" id="playerName" placeholder="Player (eg. Rooney, @waynerooney)">
+        <div class="container">
+          <div class="page-header">
+            <h1> IW Mobile App
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <form method="POST" id="form">
+                <div class="form-group">
+                  <input type="text" class="form-control" name="player" id="playerName" placeholder="Player (eg. Rooney, @waynerooney)">
+                </div>
+                <div class="radio">
+                  <label class="radio-inline">
+                    <input type="radio" name="queryOption" value="AND" checked> AND
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="queryOption" value="OR"> OR
+                  </label>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="team" id="teamName" placeholder="Team (eg. @manutd, #manutd)">
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="author" id="authorName" placeholder="Author (eg.@waynerooney)">
+                </div>
+                <div class="form-group">
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" name="api" id="checkDatabase" checked="checked">
+                      Live results
+                    </label>
+                  </div>
+                </div>
+                <p>
+                  <button type="submit" class="btn btn-primary search-button">Search</button>
+                  <button type="button" class="btn btn-primary" id="btnTest">Test Connection</button>
+                </p>
+              </form>
             </div>
-            <div class="radio">
-              <label class="radio-inline">
-                <input type="radio" name="queryOption" value="AND" checked> AND
-              </label>
-              <label class="radio-inline">
-                <input type="radio" name="queryOption" value="OR"> OR
-              </label>
+          </div>
+        </div>
+
+        <div class="container" id="tweetsPanel" hidden>
+          <div class="panel panel-primary">
+            <div class="panel-heading">Search result</div>
+            <div class="panel-body" id="tweetsResult">
+
             </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="team" id="teamName" placeholder="Team (eg. @manutd, #manutd)">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="author" id="authorName" placeholder="Author (eg.@waynerooney)">
-            </div>
-            <div class="form-group">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox" name="api" id="checkDatabase" checked="checked">
-                  Live results
-                </label>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary search-button">Search</button>
-          </form>
-          <button class="btn btn-primary" id="ajax">Get Tweet</button>
+          </div>
         </div>
         <!-- Latest compiled and minified JavaScript -->
         <script type="text/javascript" src="cordova.js"></script>
