--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -73,6 +73,7 @@
                 <p>
                   <button type="submit" class="btn btn-primary search-button">Search</button>
                   <button type="button" class="btn btn-primary" id="btnTest">Test Connection</button>
+                  <button type="button" class="btn btn-danger" id="btnDrop">Delete tables</button>
                 </p>
               </form>
             </div>
