--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -34,12 +34,12 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href='css/bootstrap.min.css'>
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>Football Tweets</title>
     </head>
     <body>
         <div class="container">
           <div class="page-header">
-            <h1> IW Mobile App
+            <h1> Football Tweets
           </div>
 
           <div class="panel panel-default">
