--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -28,39 +28,67 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+        <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href='css/bootstrap.min.css'>
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>Football Tweets</title>
     </head>
     <body>
-        <div class="container text-center">
-          <h1> IW Mobile App </h1>
-          <form method="POST" id="form">
-            <div class="form-group">
-              <input type="text" class="form-control" name="player" id="playerName" placeholder="Player (eg. Rooney, @waynerooney)">
+        <div class="container">
+          <div class="page-header">
+            <h1> Football Tweets
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <form method="POST" id="form">
+                <div class="form-group">
+                  <input type="text" class="form-control" name="player" id="playerName" placeholder="Player (eg. Rooney, @waynerooney)">
+                </div>
+                <div class="radio">
+                  <label class="radio-inline">
+                    <input type="radio" name="queryOption" value="AND" checked> AND
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="queryOption" value="OR"> OR
+                  </label>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="team" id="teamName" placeholder="Team (eg. @manutd, #manutd)">
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="author" id="authorName" placeholder="Author (eg.@waynerooney)">
+                </div>
+                <div class="form-group">
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" name="api" id="checkDatabase" checked="checked">
+                      Live results
+                    </label>
+                  </div>
+                </div>
+                <p>
+                  <button type="submit" class="btn btn-primary search-button">Search</button>
+                  <button type="button" class="btn btn-primary" id="btnTest">Test Connection</button>
+                  <button type="button" class="btn btn-danger" id="btnDrop">Delete tables</button>
+                </p>
+              </form>
             </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="team" id="teamName" placeholder="Team (eg. @manutd, #manutd)">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="author" id="authorName" placeholder="Author (eg.@waynerooney)">
-            </div>
-            <div class="form-group">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox" name="api" id="checkDatabase" checked="checked">
-                  Live results
-                </label>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary search-button">Search</button>
-          </form>
+          </div>
         </div>
-        <!-- Latest compiled and minified JavaScript -->  
+
+        <div class="container" id="tweetsPanel" hidden>
+          <div class="panel panel-primary">
+            <div class="panel-heading">Search result</div>
+            <div class="panel-body" id="tweetsResult">
+
+            </div>
+          </div>
+        </div>
+        <!-- Latest compiled and minified JavaScript -->
         <script type="text/javascript" src="cordova.js"></script>
         <script  type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
         <script  type="text/javascript" src="js/bootstrap.min.js"></script>
