--- a/www/index.html
+++ b/www/index.html
@@ -82,8 +82,17 @@
 
         <div class="container" id="tweetsPanel" hidden>
           <div class="panel panel-primary">
-            <div class="panel-heading">Search result</div>
+            <div class="panel-heading">Search result from API</div>
             <div class="panel-body" id="tweetsResult">
+
+            </div>
+          </div>
+        </div>
+
+        <div class="container" id="localTweetsPanel" hidden>
+          <div class="panel panel-primary">
+            <div class="panel-heading">Search result from local DB</div>
+            <div class="panel-body" id="localTweetsResult">
 
             </div>
           </div>
