--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -41,8 +41,8 @@
           <div class="page-header">
             <h1> Football Tweets
           </div>
-
-          <div class="panel panel-default">
+          <div class="col-md-4 col-md-offset-2 search-section">
+          <div class="panel">
             <div class="panel-body">
               <form method="POST" id="form">
                 <div class="form-group">
@@ -53,7 +53,7 @@
                     <input type="radio" name="queryOption" value="AND" checked> AND
                   </label>
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="OR"> OR
+                    <input type="radio" name="queryOption" value="OR">
                   </label>
                 </div>
                 <div class="form-group">
@@ -79,10 +79,9 @@
             </div>
           </div>
         </div>
-
+      </div>
         <div class="container" id="tweetsPanel" hidden>
-          <div class="panel panel-primary">
-            <div class="panel-heading">Search result</div>
+            <h>Search result</h>
             <div class="panel-body" id="tweetsResult">
 
             </div>
