--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -37,11 +37,11 @@
         <title>Football Tweets</title>
     </head>
     <body>
-        <div class="container">
+        <div class="top-section">
           <div class="page-header">
-            <h1> Football Tweets
+            <h1> Football Tweets <h1>
           </div>
-          <div class="col-md-4 col-md-offset-2 search-section">
+          <div class="search-section">
           <div class="panel">
             <div class="panel-body">
               <form method="POST" id="form">
@@ -53,7 +53,7 @@
                     <input type="radio" name="queryOption" value="AND" checked> AND
                   </label>
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="OR">
+                    <input type="radio" name="queryOption" value="OR"> OR
                   </label>
                 </div>
                 <div class="form-group">
@@ -80,13 +80,11 @@
           </div>
         </div>
       </div>
-        <div class="container" id="tweetsPanel" hidden>
-            <h>Search result</h>
-            <div class="panel-body" id="tweetsResult">
-
+        <div class="tweetsContainer" id="tweetsPanel" hidden>
+            <h2>Search results</h2>
+            <div  id="tweetsResult">
             </div>
           </div>
-        </div>
         <!-- Latest compiled and minified JavaScript -->
         <script type="text/javascript" src="cordova.js"></script>
         <script  type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
