can query from app and get results

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -50,10 +50,10 @@
                 </div>
                 <div class="radio">
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="AND" checked> AND
+                    <input type="radio" name="queryOption" value="AND" id="AND" checked> AND
                   </label>
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="OR">
+                    <input type="radio" name="queryOption" value="OR" id="OR"> OR
                   </label>
                 </div>
                 <div class="form-group">
