--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -50,10 +50,10 @@
                 </div>
                 <div class="radio">
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="AND" id="AND" checked> AND
+                    <input type="radio" name="queryOption"  id="queryOption" checked value="AND"> AND
                   </label>
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="OR" id="OR"> OR
+                    <input type="radio" name="queryOption"  id="queryOption" value="OR"> OR
                   </label>
                 </div>
                 <div class="form-group">
