--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -80,6 +80,40 @@
           </div>
         </div>
       </div>
+      <div class="extra-info">
+
+<!--  EXTRA INFO -->
+  <div class="panel-group" id="accordion">
+    <div class="panel panel-default">
+      <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+      <div class="panel-heading">
+        <h4 class="panel-title" style="text-decoration: none !important;">
+          Graph
+        </h4>
+      </div>
+    </a>
+      <div id="collapse1" class="panel-collapse collapse">
+
+        <div class="panel-body"></div>
+
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+      <div class="panel-heading">
+        <h4 class="panel-title" style="text-decoration: none !important;">
+          Player info
+        </h4>
+      </div>
+    </a>
+      <div id="collapse2" class="panel-collapse collapse">
+
+        <div class="panel-body"></div>
+        
+      </div>
+    </div>
+      </div>
+      <!-- TWEETS -->
         <div class="tweetsContainer" id="tweetsPanel" hidden>
             <h2>Search results</h2>
             <div  id="tweetsResult">
