--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -37,12 +37,12 @@
         <title>Football Tweets</title>
     </head>
     <body>
-        <div class="top-section">
+        <div class="container">
           <div class="page-header">
-            <h1> Football Tweets <h1>
+            <h1>Football Tweets
           </div>
-          <div class="search-section">
-          <div class="panel">
+
+          <div class="panel panel-default">
             <div class="panel-body">
               <form method="POST" id="form">
                 <div class="form-group">
@@ -50,9 +50,10 @@
                 </div>
                 <div class="radio">
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption"  id="queryOption" checked value="AND"> AND
+                    <input type="radio" name="queryOption" value="AND" checked> AND
                   </label>
-                    <input type="radio" name="queryOption"  id="queryOption" value="OR"> OR
+                  <label class="radio-inline">
+                    <input type="radio" name="queryOption" value="OR"> OR
                   </label>
                 </div>
                 <div class="form-group">
@@ -78,46 +79,15 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="extra-info">
 
-<!--  EXTRA INFO -->
-  <div class="panel-group" id="accordion">
-    <div class="panel panel-default">
-      <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-      <div class="panel-heading">
-        <h4 class="panel-title" style="text-decoration: none !important;">
-          Graph
-        </h4>
-      </div>
-    </a>
-      <div id="collapse1" class="panel-collapse collapse">
+        <div class="container" id="tweetsPanel" hidden>
+          <div class="panel panel-primary">
+            <div class="panel-heading">Search result</div>
+            <div class="panel-body" id="tweetsResult">
 
-        <div class="panel-body"></div>
-
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-      <div class="panel-heading">
-        <h4 class="panel-title" style="text-decoration: none !important;">
-          Player info
-        </h4>
-      </div>
-    </a>
-      <div id="collapse2" class="panel-collapse collapse">
-
-        <div class="panel-body"></div>
-
-      </div>
-    </div>
-      </div>
-      <!-- TWEETS -->
-        <div class="tweetsContainer" id="tweetsPanel" hidden>
-            <h2>Search results</h2>
-            <div  id="tweetsResult">
             </div>
           </div>
+        </div>
         <!-- Latest compiled and minified JavaScript -->
         <script type="text/javascript" src="cordova.js"></script>
         <script  type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
