--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -50,8 +50,9 @@
                 </div>
                 <div class="radio">
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption"  id="queryOption" checked value="AND"> AND
+                    <input type="radio" class="and-button" name="queryOption"  id="queryOption" checked value="AND"> AND
                   </label>
+                  <label class="radio-inline">
                     <input type="radio" name="queryOption"  id="queryOption" value="OR"> OR
                   </label>
                 </div>
