--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,7 @@
     to you under the Apache License, Version 2.0 (the
     "License"); you may not use this file except in compliance
     with the License.  You may obtain a copy of the License at
-
     http://www.apache.org/licenses/LICENSE-2.0
-
     Unless required by applicable law or agreed to in writing,
     software distributed under the License is distributed on an
     "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -37,12 +35,12 @@
         <title>Football Tweets</title>
     </head>
     <body>
-        <div class="container">
+        <div class="top-section">
           <div class="page-header">
-            <h1>Football Tweets
+            <h1> Football Tweets <h1>
           </div>
-
-          <div class="panel panel-default">
+          <div class="search-section">
+          <div class="panel">
             <div class="panel-body">
               <form method="POST" id="form">
                 <div class="form-group">
@@ -79,15 +77,46 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="extra-info">
 
-        <div class="container" id="tweetsPanel" hidden>
-          <div class="panel panel-primary">
-            <div class="panel-heading">Search result</div>
-            <div class="panel-body" id="tweetsResult">
+<!--  EXTRA INFO -->
+  <div class="panel-group" id="accordion">
+    <div class="panel panel-default">
+      <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+      <div class="panel-heading">
+        <h4 class="panel-title" style="text-decoration: none !important;">
+          Graph
+        </h4>
+      </div>
+    </a>
+      <div id="collapse1" class="panel-collapse collapse">
 
+        <div class="panel-body"></div>
+
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+      <div class="panel-heading">
+        <h4 class="panel-title" style="text-decoration: none !important;">
+          Player info
+        </h4>
+      </div>
+    </a>
+      <div id="collapse2" class="panel-collapse collapse">
+
+        <div class="panel-body"></div>
+
+      </div>
+    </div>
+      </div>
+      <!-- TWEETS -->
+        <div class="tweetsContainer" id="tweetsPanel" hidden>
+            <h2>Search results</h2>
+            <div  id="tweetsResult">
             </div>
           </div>
-        </div>
         <!-- Latest compiled and minified JavaScript -->
         <script type="text/javascript" src="cordova.js"></script>
         <script  type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
