--- a/www/index.html
+++ b/www/index.html
@@ -48,10 +48,10 @@
                 </div>
                 <div class="radio">
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="AND" checked> AND
+                    <input type="radio" name="queryOption" id="queryOption" value="AND" checked> AND
                   </label>
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="OR"> OR
+                    <input type="radio" name="queryOption" id="queryOption" value="OR"> OR
                   </label>
                 </div>
                 <div class="form-group">
@@ -59,14 +59,6 @@
                 </div>
                 <div class="form-group">
                   <input type="text" class="form-control" name="author" id="authorName" placeholder="Author (eg.@waynerooney)">
-                </div>
-                <div class="form-group">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" name="api" id="checkDatabase" checked="checked">
-                      Live results
-                    </label>
-                  </div>
                 </div>
                 <p>
                   <button type="submit" class="btn btn-primary search-button">Search</button>
