Changed some styling, fixed results rendering on top of previous results

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -37,7 +37,7 @@
     <body>
         <div class="top-section">
           <div class="page-header">
-            <h1> Football Tweets <h1>
+            <h1>Football Tweets</h1>
           </div>
           <div class="search-section">
           <div class="panel">
@@ -110,6 +110,7 @@
 
       </div>
     </div>
+      </div>
       </div>
       <!-- TWEETS -->
         <div class="tweetsContainer" id="tweetsPanel" hidden>
