--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     <body>
         <div class="top-section">
           <div class="page-header">
-            <h1> Football Tweets <h1>
+            <h1> Football Tweets </h1>
           </div>
           <div class="search-section">
           <div class="panel">
