--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -74,7 +74,7 @@
 
 <!--  EXTRA INFO -->
   <div class="panel-group" id="accordion">
-    <div class="panel panel-default">
+    <!--<div class="panel panel-default">
       <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
       <div class="panel-heading">
         <h4 class="panel-title" style="text-decoration: none !important;">
@@ -87,9 +87,9 @@
         <div class="panel-body"></div>
 
       </div>
-    </div>
-    <div class="panel panel-default">
-      <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+    </div>-->
+    <div class="panel panel-default" id="dbtab" hidden>
+      <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" >
       <div class="panel-heading">
         <h4 class="panel-title" style="text-decoration: none !important;">
           Player info
@@ -98,7 +98,10 @@
     </a>
       <div id="collapse2" class="panel-collapse collapse">
 
-        <div class="panel-body"></div>
+        <div class="panel-body">
+          <div  id="dbinfo">
+          </div>
+        </div>
 
       </div>
     </div>
