Changed style, fixed dbpedia bug, added feedback to button taps, added case for no query input

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -38,78 +38,88 @@
     <body>
         <div class="top-section">
           <div class="page-header">
-            <h1>Football Tweets</h1>
+            <h1> Football Tweets </h1>
           </div>
+          <!--  SEARCH FORM -->
           <div class="search-section">
           <div class="panel">
             <div class="panel-body">
               <form method="POST" id="form">
                 <div class="form-group">
-                  <input type="text" class="form-control" name="player" id="playerName" placeholder="Player (eg. Rooney, @waynerooney)">
+                  <label for="playerName">Player</label>
+                  <input type="text" class="form-control" name="player" id="playerName" placeholder="eg. Rooney, @waynerooney">
                 </div>
                 <div class="radio">
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="AND" checked> AND
+                    <input type="radio" name="queryOption" id="queryOption" value="AND" checked> AND
                   </label>
                   <label class="radio-inline">
-                    <input type="radio" name="queryOption" value="OR"> OR
+                    <input type="radio" name="queryOption" id="queryOption" value="OR"> OR
                   </label>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="team" id="teamName" placeholder="Team (eg. @manutd, #manutd)">
+                  <label for="teamName">Team</label>
+                  <input type="text" class="form-control" name="team" id="teamName" placeholder="eg. @manutd, #manutd">
+                </div>
+                <div class="radio">
+                  <label class="radio-inline">
+                    <input type="radio" name="fromOption" value="AND" checked> AND
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="fromOption" value="OR"> OR
+                  </label>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="author" id="authorName" placeholder="Author (eg.@waynerooney)">
+                  <label for="authorName">From this account</label>
+                  <input type="text" class="form-control" name="author" id="authorName" placeholder="eg.@WayneRooney">
                 </div>
                 <p>
-                  <button type="submit" class="btn btn-primary search-button">Search</button>
+                  <button type="submit" class="btn btn-primary search-button" ontouchstart="return true;">Search</button>
+                </p>
+                <!--
+                <p>
                   <button type="button" class="btn btn-primary" id="btnTest">Test Connection</button>
                   <button type="button" class="btn btn-danger" id="btnDrop">Delete tables</button>
-                </p>
+                </P>
+                -->
               </form>
             </div>
           </div>
         </div>
       </div>
-      <div class="extra-info">
 
-<!--  EXTRA INFO -->
-  <div class="panel-group" id="accordion">
-    <div class="panel panel-default" id="graphtab" hidden>
-      <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="tab-link">
-      <div class="panel-heading">
-        <h4 class="panel-title" style="text-decoration: none !important;">
-          Freaquency Analysis
-        </h4>
-      </div>
-    </a>
-      <div id="collapse1" class="panel-collapse collapse">
-
-        <div class="panel-body">
-        </canvs><canvas id="freqGraph"></canvas>
-        </div>
-
-      </div>
-    </div>
-    <div class="panel panel-default " id="dbtab" hidden>
-      <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="tab-link">
-      <div class="panel-heading">
-        <h4 class="panel-title" style="text-decoration: none !important;">
-          Player info
-        </h4>
-      </div>
-    </a>
-      <div id="collapse2" class="panel-collapse collapse">
-
-        <div class="panel-body">
-          <div  id="dbinfo">
+      <!--  EXTRA INFO -->
+      <div class="panel-group" id="accordion">
+        <div class="panel panel-default" id="graphtab" hidden>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="tab-link">
+            <div class="panel-heading">
+              <h4 class="panel-title" style="text-decoration: none !important;">
+                Freaquency Analysis
+              </h4>
+            </div>
+          </a>
+          <div id="collapse1" class="panel-collapse collapse">
+            <div class="panel-body">
+              <canvas id="freqGraph"></canvas>
+            </div>
           </div>
         </div>
+        <div class="panel panel-default" id="dbtab" hidden>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="tab-link">
+            <div class="panel-heading">
+              <h4 class="panel-title" style="text-decoration: none !important;">
+                Player info
+              </h4>
+            </div>
+          </a>
+          <div id="collapse2" class="panel-collapse collapse">
+            <div class="panel-body">
+              <div  id="dbinfo"></div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-      </div>
-    </div>
-      </div>
-      </div>
       <!-- TWEETS -->
         <div class="tweetsContainer" id="tweetsPanel" hidden>
             <h2>Search results</h2>
