--- a/www/index.html
+++ b/www/index.html
@@ -74,12 +74,14 @@
                   <input type="text" class="form-control" name="author" id="authorName" placeholder="eg.@WayneRooney">
                 </div>
                 <p>
-                  <button type="submit" class="btn btn-primary search-button">Search</button>
+                  <button type="submit" class="btn btn-primary search-button" ontouchstart="return true;">Search</button>
                 </p>
+                <!--
                 <p>
                   <button type="button" class="btn btn-primary" id="btnTest">Test Connection</button>
                   <button type="button" class="btn btn-danger" id="btnDrop">Delete tables</button>
                 </P>
+                -->
               </form>
             </div>
           </div>
