--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -40,6 +40,7 @@
           <div class="page-header">
             <h1> Football Tweets </h1>
           </div>
+          <!--  SEARCH FORM -->
           <div class="search-section">
           <div class="panel">
             <div class="panel-body">
@@ -73,12 +74,14 @@
                   <input type="text" class="form-control" name="author" id="authorName" placeholder="eg.@WayneRooney">
                 </div>
                 <p>
-                  <button type="submit" class="btn btn-primary search-button">Search</button>
+                  <button type="submit" class="btn btn-primary search-button" id='touch-button'>Search</button>
                 </p>
+                <!--
                 <p>
                   <button type="button" class="btn btn-primary" id="btnTest">Test Connection</button>
                   <button type="button" class="btn btn-danger" id="btnDrop">Delete tables</button>
                 </P>
+                -->
               </form>
             </div>
           </div>
@@ -91,7 +94,7 @@
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="tab-link">
             <div class="panel-heading">
               <h4 class="panel-title" style="text-decoration: none !important;">
-                Freaquency Analysis
+                Frequency Analysis
               </h4>
             </div>
           </a>
