--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -76,19 +76,13 @@
                 <p>
                   <button type="submit" class="btn btn-primary search-button" id='touch-button'>Search</button>
                 </p>
-                <!--
-                <p>
-                  <button type="button" class="btn btn-primary" id="btnTest">Test Connection</button>
-                  <button type="button" class="btn btn-danger" id="btnDrop">Delete tables</button>
-                </P>
-                -->
               </form>
             </div>
           </div>
         </div>
       </div>
 
-      <!--  EXTRA INFO -->
+      <!--  EXTRA INFO (Frequency analysis and DBpedia info)-->
       <div class="panel-group" id="accordion">
         <div class="panel panel-default" id="graphtab" hidden>
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="tab-link">
